--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <link data-trunk rel="inline" href="build/web/sound.js"/>
         <div class="game-container">
-            <canvas id="bevy">
+            <canvas id="bevy" oncontextmenu="return false;">
                 Javascript and support for canvas is required
             </canvas>
         </div>
